--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,15 +4,15 @@ stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - master  # ветка git
-    - main
+
+    - main # ветка git
 
 build: off  # будем использовать свой скрипт сборки
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-order.jar &
+  - java -jar ./artifacts/app-order.jar
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
-  - chmod +x gradlew
+  
