--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'com.codeborne:selenide:5.19.0'
-    //testImplementation("io.github.bonigarcia:webdrivermanager:5.3.0")
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.0")
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     //implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
 
