--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.19.0'
-    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.0")
+    //testImplementation 'com.codeborne:selenide:5.19.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
+    implementation 'ru.sbtqa:webdrivermanager:2.2.3'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     //implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
 
@@ -27,5 +29,5 @@ dependencies {
 test {
     useJUnitPlatform()
     // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    //systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
