--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     testImplementation 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
     testImplementation "io.github.bonigarcia:webdrivermanager:4.4.0"
-
+    testImplementation 'org.slf4j:slf4j-simple:1.6.2'
 
 }
 
